# LearnAlyzeAgent

./: .gitignore  README.md  package-lock.json  package.json  read.md
agent_control_plane/: README.md  package-lock.json  package.json  pyproject.toml
agent_control_plane/app/: db.py  logic.py  main.py  models.py  schemas.py
agent_control_plane/app/static/: index.html
agent_control_plane/app/static/css/: app.css
agent_control_plane/app/static/js/: app.js
agent_control_plane/scripts/: dev-stack.js  serve-static.js
agent_control_plane/tests/: test_api.py
