[project]
name = "arx-agent-control-plane"
version = "0.1.0"
description = "ARX Agent Control Plane MVP backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116.1",
  "uvicorn>=0.35.0",
  "sqlmodel>=0.0.24",
  "pydantic>=2.11.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "httpx>=0.28.1"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
